--- a/Index.html
+++ b/Index.html
@@ -1,13 +1,212 @@
 <!DOCTYPE html>
-<head>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>Shangjie Du</title>
 
-
-
-
-
-</head>
-<body>
-
-
-
-</body>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
+    <link href="assets/main.css" rel="stylesheet" />
+  </head>
+  <body>
+    <header class="header sticked">
+      <div class="header__content">
+        <ul class="header__bar">
+          <li class="header__item">
+            Shangjie DU
+          </li>
+          <li class="header__item"><a href=".home">Home</a></li>
+          <li class="header__item">Resume</li>
+          <li class="header__item">Services</li>
+          <li class="header__item">Contact</li>
+        </ul>
+      </div>
+    </header>
+    <main>
+      <div class="home">
+        <div class="home__wrapper container">
+          <div class="home__subpage row">
+            <div class="imgContainer col-sm-4 col-md-4 col-lg-4"></div>
+            <div class="home__subpage--info col-sm-8 col-md-8 col-lg-8">
+              <h2>Shangjie Du</h2>
+              <p>FrontEnd Developer</p>
+            </div>
+          </div>
+          <div class="home__content row">
+            <div class="col-sm-6 col-md-6 col-lg-6">
+              <h3>Shangjie Du</h3>
+              <p>
+                Hello! I’m John Doe. Lorem ipsum dolor sit amet, consectetur
+                adipiscing elit. Aenean fermentum ullamcorper sem, at placerat
+                dolor volutpat ac. Duis nulla enim, condimentum nec ultricies
+              </p>
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+              <ul class="home__content--list">
+                <li>
+                  <span class="title">Age:</span><span class="value">22</span>
+                </li>
+                <li>
+                  <span class="title">Address:</span
+                  ><span class="value" value>22</span>
+                </li>
+                <li>
+                  <span class="title">E-mail:</span
+                  ><span class="value" value>dushangjie@gmail.com</span>
+                </li>
+                <li>
+                  <span class="title">Phone:</span
+                  ><span class="value" value>+61 411 232 233</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="resume">
+        <div class="container resume__wrapper">
+          <div class="resume__subpage">
+            <h2>Resumes</h2>
+          </div>
+          <div class="resume__content row">
+            <div class="col-sm-12 col-md-6 col-lg-6">
+              <h4>Education</h4>
+              <ul class="resume__list">
+                <li class="resume__item">
+                  <span class="item--title"
+                    >Queensland University of Technology</span
+                  >
+                  <span class="item--period">2017-2019</span>
+                  <span class="item--major">XXX</span>
+                </li>
+                <li class="resume__item">
+                  <span class="item--title">The University of Queensland</span>
+                  <span class="item--period">2014-2017</span>
+                  <span class="item--major">XXXXXXXXXXXXXXXX</span>
+                </li>
+              </ul>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-6">
+              <h4>Project</h4>
+              <ul class="resume__list">
+                <li class="resume__item">
+                  <span class="item--title"
+                    >Queensland University of Technology</span
+                  >
+                  <span class="item--period">2017-2019</span>
+                  <span class="item--major">XXX</span>
+                </li>
+                <li class="resume__item">
+                  <span class="item--title">The University of Queensland</span>
+                  <span class="item--period">2014-2017</span>
+                  <span class="item--major">XXXXXXXXXXXXXXXX</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="contact">
+        <div class="container contact__wrapper">
+          <div class="contact__subpage">
+            <h2>Contact</h2>
+          </div>
+          <div class="contact__content row">
+            <div class="col-sm-6 col-md-12">
+              <h4>Contact Form</h4>
+              <ul>
+                <li>
+                  <i class="fa fa-user"></i>
+                  <label>Full Name:</label
+                  ><input
+                    id="form_name"
+                    type="text"
+                    name="name"
+                    class="form-control"
+                    placeholder=""
+                    required="required"
+                    data-error="Name is required."
+                  />
+                </li>
+                <li>
+                  <i class="fa fa-user"></i>
+                  <label>Email Address:</label
+                  ><input
+                    id="form_email"
+                    type="email"
+                    name="email"
+                    class="form-control"
+                    placeholder=""
+                    required="required"
+                    data-error="Valid email is required."
+                  />
+                </li>
+                <li class ="col-sm-6 col-md-6" >
+                <div
+                  class="g-recaptcha"
+                  data-sitekey="6LdqmCAUAAAAAMMNEZvn6g4W5e0or2sZmAVpxVqI"
+                >
+                  <div style="width: 304px; height: 78px;">
+                    <div>
+                      <iframe
+                        src="https://www.google.com/recaptcha/api2/anchor?ar=1&amp;k=6LdqmCAUAAAAAMMNEZvn6g4W5e0or2sZmAVpxVqI&amp;co=aHR0cHM6Ly9oYWRlczIxNy5naXRodWIuaW86NDQz&amp;hl=en&amp;v=6uMSoEJtPugDt7Qm0Uu5iuSY&amp;size=normal&amp;cb=1ithzdg19nws"
+                        width="304"
+                        height="78"
+                        role="presentation"
+                        name="a-pg2e9c4u2wi2"
+                        frameborder="0"
+                        scrolling="no"
+                        sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation allow-modals allow-popups-to-escape-sandbox"
+                      ></iframe>
+                    </div>
+                    <textarea
+                      id="g-recaptcha-response"
+                      name="g-recaptcha-response"
+                      class="g-recaptcha-response"
+                      style="
+                        width: 250px;
+                        height: 40px;
+                        border: 1px solid rgb(193, 193, 193);
+                        margin: 10px 25px;
+                        padding: 0px;
+                        resize: none;
+                        display: none;
+                      "
+                    ></textarea>
+                  </div>
+                  </li>
+                  <li class="col-sm-6 col-md-6">
+                    <input type="submit" class="button btn-send disabled" value="Send message">
+                  </li>
+                </div>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
